# bluedis

./: .eslintrc.cjs  .eslintrc.json  .forgeignore  .gitignore  .prettierignore  Gruntfile.js  LICENSE.txt  README.md  ROADMAP.md  build  build.sh  forge.config.js  gulpfile.js  index.html  jest.app.globals.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
.cargo/: config.toml
.circleci/: config.yml  credentials.enc
.github/workflows/: deploy.yml  develop.yml  release.yml  tests.yml
.husky/: pre-commit
app/: jest.config.js  main.ts  preload.js  updater.ts
app/database/: database.constants.ts  database.dto.ts  database.helpers.ts  database.spec.ts  index.ts  manager.ts
app/database/command/: index.ts
app/database/hash/: hash.spec.ts  index.ts
app/database/list/: index.ts  list.spec.ts
app/database/set/: index.ts  set.spec.ts
app/database/string/: index.ts  string.spec.ts
app/database/zset/: index.ts  set.spec.ts  zset.spec.ts
app/listeners/: index.ts
assets/: icon.icns
choco/: bluedis.0.1.0.nupkg  bluedis.nuspec
choco/tools/: LICENSE.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
config/: entitlements.plist
public/: index.html
scripts/: run-test.ps1
scripts/macos/: create-version.js  notarize.sh  sign.sh
scripts/snapcraft/: prepare.sh
snap/: snapcraft.yaml
snap/gui/: bluedis.desktop  com.ghanizadev.bluedis.desktop
src/: App.tsx  global.d.ts  index.ts  index.tsx  main.tsx  setupTests.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: helper.rs  main.rs
src-tauri/src/database/: commands.rs  hash.rs  list.rs  mod.rs  set.rs  string.rs  test.rs  zset.rs
src-tauri/src/general/: commands.rs  mod.rs  test.rs
src-tauri/src/persistence/: commands.rs  mod.rs  test.rs
src-tauri/src/state/: mod.rs  test.rs
src/App/: .editorconfig  package.json  sonar-project.properties
src/App/.scannerwork/: report-task.txt
src/App/public/: index.html
src/App/src/: App.tsx  index.tsx
src/__tests__/: addListItem.spec.tsx  addSetItem.spec.tsx  addZSetItem.spec.tsx  connect.spec.tsx  home.spec.tsx  input.spec.tsx  settings.spec.tsx
src/assets/: Clipboard.tsx  Clock.tsx  Close.tsx  Database.tsx  Download.tsx  Edit.tsx  Eye.tsx  Facebook.tsx  Github.tsx  Help.tsx  Info.tsx  Instagram.tsx  Left.tsx  Linkedin.tsx  LogOut.tsx  Maximize.tsx  Menu.tsx  Minimize.tsx  Minus.tsx  Plus.tsx  Refresh.tsx  Right.tsx  Save.tsx  Settings.tsx  Square.tsx  Star.tsx  Terminal.tsx  Trash.tsx  Twitter.tsx
src/components/AddKey/: index.tsx  (+1 more)
src/database/: availableCommands.json  index.ts
src/i18n/: en.json  i18n.dto.ts  index.ts  pt_BR.ts
src/listeners/: index.ts
src/redux/: store.ts
src/services/: connection-response.interface.ts  find-key-response.interface.ts  find-keys-response.interface.ts  index.ts  key.interface.ts  listeners.ts  main-process.ts  mainProcess.ts  services.ts
src/theme/: globalStyles.ts  index.ts
src/utils/: ThemeWrapper.tsx  WindowRequireMock.ts  index.ts
(+273 files in other folders)
